# trade-guardin

./: .gitignore  README.md  README2.md  TRADE GUARDIAN 路由矩阵.md  build_context.txt  create_tg_db.py  dashboard.bat  history_viewer.py  merge_project.py  project_flat_view.txt  pyproject.toml  requirements.txt  test_action.py
config/: config.json  config.yaml
db/: trade_guardian.db
src/: trade_guardian.py
src/trade_guardian/: __init__.py
src/trade_guardian/action/: __init__.py  safety.py  sights.py  sniper.py
src/trade_guardian/app/: cli.py  orchestrator.py  persistence.py  renderer.py
src/trade_guardian/domain/: features.py  hv.py  models.py  policy.py  registry.py  scoring.py
src/trade_guardian/infra/: cache.py  config.py  rate_limit.py  retry_option_chain.py  schwab_client.py  schwab_token_manager.py  schwab_token_manager_legacy.py  tickers.py
src/trade_guardian/strategies/: auto.py  base.py  blueprint.py  calendar.py  diagonal.py  hv_calendar.py  iron_condor.py  long_gamma.py  placeholder.py  strategy2_stub.py  vertical_credit.py
src/trade_guardian/ui/: dashboard.py
