[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-guardian"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
  "numpy",
  "tabulate",
  "colorama",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
